Add getKzgInstance() in spec